# VailtRDP

./: .gitignore  CMakeLists.txt  README.md
docs/: integration-checks-auth.md
resources/: resources.qrc
resources/linux/: vaultrdp.desktop
src/: main.cpp
src/core/: AppLogging.cpp  AppLogging.hpp  AppPaths.cpp  AppPaths.hpp  DatabaseManager.cpp  DatabaseManager.hpp  MigrationManager.cpp  MigrationManager.hpp  Uuid.cpp  Uuid.hpp  VaultManager.cpp  VaultManager.hpp
src/core/model/: Entities.hpp
src/core/repository/: ConnectionRepository.cpp  ConnectionRepository.hpp  CredentialRepository.cpp  CredentialRepository.hpp  GatewayRepository.cpp  GatewayRepository.hpp  Repository.cpp  Repository.hpp  RowMappers.hpp  SecretRepository.cpp  SecretRepository.hpp  SqlHelpers.hpp
src/core/security/: PassphrasePolicy.cpp  PassphrasePolicy.hpp
src/protocols/: ISession.cpp  ISession.hpp  RdpSession.cpp  RdpSession.hpp  RdpSessionUtils.cpp  RdpSessionUtils.hpp
src/system/: ScreenLockMonitor.cpp  ScreenLockMonitor.hpp
src/ui/: CredentialPromptDialog.cpp  CredentialPromptDialog.hpp  CredentialScope.cpp  CredentialScope.hpp  FolderTreeView.cpp  FolderTreeView.hpp  GatewayScope.cpp  GatewayScope.hpp  IconTheme.cpp  IconTheme.hpp  MainWindow.cpp  MainWindow.hpp  MainWindowInteraction.cpp  NewConnectionDialog.cpp  NewConnectionDialog.hpp  NewCredentialDialog.cpp  NewCredentialDialog.hpp  NewGatewayDialog.cpp  NewGatewayDialog.hpp  RdpRenderWidget.cpp  RdpRenderWidget.hpp  RootScope.cpp  RootScope.hpp  SessionController.cpp  SessionController.hpp  SessionRuntimeOptions.cpp  SessionRuntimeOptions.hpp  SessionTabContent.cpp  SessionTabContent.hpp  SessionWorkspace.cpp  SessionWorkspace.hpp  TreeItemRoles.hpp
tests/: integration_tests.cpp
